# duolingoreminder

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix
nix/: hm-module.nix
src/: CMakeLists.txt  checker.cpp  checker.hpp  config.cpp  config.hpp  duolingo_client.cpp  duolingo_client.hpp  main.cpp  notifier.cpp  notifier.hpp
test/: CMakeLists.txt  checker_test.cpp  config_test.cpp  duolingo_client_test.cpp  notifier_test.cpp
